[package]
name = "memoizer"
version = "0.1.1"
authors = ["Amy Jie <git.xvrqt.com>"]
edition = "2018"
repository = "https://git.xvrqt.com/amy/memoizer.git"
homepage = "https://git.xvrqt.com/amy/memoizer"
license = "MIT"
readme = "README.md"
description = "Simple function memoization struct."

[dependencies]
