[package]
name = "memoizer"
version = "0.2.1"
authors = ["Amy Jie <git.xvrqt.com>"]
edition = "2018"
repository = "https://git.xvrqt.com/amy/memoizer.git"
homepage = "https://git.xvrqt.com/amy/memoizer"
license = "BSD-3"
readme = "README.md"
description = "Simple function memoization struct."
keywords = ["memoization", "cache", "struct", "xvrqt"]
categories = ["cache", "caching", "xvrqt"]

[dependencies]
