[package]
name = "memoizer"
version = "0.2.2"
authors = ["Amy Jie <git.xvrqt.com>"]
edition = "2018"
repository = "https://github.com/xvrqt/memoizer.git"
homepage = "https://github.com/xvrqt/memoizer"
license = "BSD-3-Clause"
readme = "README.md"
description = "Simple function memoization struct."
keywords = ["memoization", "cache", "struct", "xvrqt"]
categories = ["cache", "caching", "xvrqt"]

[dependencies]
